--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "-": "^0.0.1",
+    "axios": "^1.7.2",
     "dom": "^0.0.3",
     "react": "^18.3.1",
     "react-dom": "^18.2.0",
